@@ -365,11 +365,15 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.3</version>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
-                </plugin>
+                 <plugin>
+                   <groupId>org.apache.maven.plugins</groupId> 
+                   <artifactId>maven-surefire-plugin</artifactId>
+                   <version>2.22.2</version>
+                   <configuration>
+                     <argLine>--enable-preview</argLine>
+                 </configuration>
+            </plugin>
+
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
